# codealong-server

./: Cargo.toml
src/: main.rs
src/endpoints/: session.rs  sessions.rs  user.rs
src/logic/: directory.rs  file.rs  mod.rs  session.rs  user.rs
src/models/: directory.rs  errors.rs  file.rs  mod.rs  response.rs  server_activity.rs  session.rs  session_activity.rs  user_activity.rs
src/utils/: settings.rs
