[package]
name = "codealong-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.10"
futures-util =  "0.3.23"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
futures = "0.3.17"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
